# SOC

./: .coverage  .gitignore  .pre-commit-config.yaml  =2.0.0  CONTRIBUTING.md  LICENSE  README.md  cli.py  coverage.xml  create_lg_sotf_structure.bat  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test.html  test.py  test_alert.json
configs/: development.yaml  local.yaml  poc.yaml  production.yaml  testing.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
scripts/: deploy.py  run_poc.py  run_tests.py  setup_db.py
src/lg_front/: package-lock.json  package.json  tailwind.config.js
src/lg_front/src/: App.js
src/lg_front/src/components/common/: ProtectedRoute.jsx
src/lg_front/src/components/dashboard/: IngestionPanel.jsx
src/lg_front/src/components/layout/: Layout.jsx  SideBar.jsx  TopBar.jsx
src/lg_front/src/contexts/: AlertContext.jsx  AuthContext.jsx
src/lg_front/src/hooks/: useAlerts.js  useApi.js  useAuth.js  useDebounce.js  useLocalStorage.js  useWebSocket.js
src/lg_front/src/pages/: Agents.jsx  Alerts.jsx  Analytics.jsx  Dashboard.jsx  Escalations.jsx  Login.jsx  Settings.jsx
src/lg_front/src/services/: api.js
src/lg_front/src/styles/: global.css
src/lg_front/src/utils/: constants.js  helpers.js
src/lg_sotf/: __init__.py  __main__.py  app_initializer.py  cli.py  main.py
src/lg_sotf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/lg_sotf/agents/: base.py  registry.py
src/lg_sotf/agents/analysis/: __init__.py  base.py  react.py  tools.py
src/lg_sotf/agents/correlation/: __init__.py  base.py
src/lg_sotf/agents/human_loop/: __init__.py  base.py  escalation.py  feedback.py
src/lg_sotf/agents/ingestion/: __init__.py  base.py
src/lg_sotf/agents/ingestion/plugins/: __init__.py  base.py  registry.py  sources.py
src/lg_sotf/agents/response/: __init__.py  base.py  playbook.py
src/lg_sotf/agents/triage/: base.py
src/lg_sotf/api/: __init__.py  app.py  dependencies.py
src/lg_sotf/api/models/: alerts.py  ingestion.py  metrics.py  workflows.py
src/lg_sotf/api/routers/: __init__.py  alerts.py  correlations.py  dashboard.py  escalations.py  ingestion.py  metrics.py  websocket.py
src/lg_sotf/api/utils/: websocket.py
src/lg_sotf/audit/: __init__.py  logger.py  metrics.py  tracer.py
src/lg_sotf/core/: __init__.py  exceptions.py  graph.py  workflow.py
src/lg_sotf/core/config/: __init__.py  manager.py
src/lg_sotf/core/edges/: __init__.py  conditions.py  fallback.py  policies.py  router.py
src/lg_sotf/core/nodes/: __init__.py  base.py
src/lg_sotf/core/state/: __init__.py  history.py  manager.py  model.py  serialization.py
src/lg_sotf/storage/: __init__.py  base.py  postgres.py  redis.py
src/lg_sotf/tools/: __init__.py  orchestrator.py  registry.py
src/lg_sotf/tools/adapters/: base.py
src/lg_sotf/tools/strategies/: async_execution.py  caching.py  fallback.py  retry.py
src/lg_sotf/utils/: llm.py  monitoring.py
tests/: __init__.py  conftest.py
tests/fixtures/alerts/processed/: authentification_events.json  crowdstrike_detections.json  siem_firewall_alerts.csv
tests/unit/test_core/: test_workflow.py
tests/unit/test_core/test_state/: test_state_manager.py
